fixed off centered images

--- a/css/style.css
+++ b/css/style.css
@@ -471,7 +471,7 @@ figcaption{
     border-radius:2px;
 }
 
-.strategies img{
+.strategies figure img{
     display:block;
     margin:0 auto;
     min-width:250px;
@@ -491,12 +491,11 @@ figcaption{
     border-radius:2px;
 }
 
-.gobby-bomg-img{
+.gobby-bomb-img{
     display:block;
     margin:0 auto;
     min-width:250px;
-    max-width:80%;
-    height:auto;
+    max-width:50%;
     border:3px solid #90B0CD;
     border-radius:2px;
 }
@@ -509,10 +508,28 @@ figcaption{
     height:auto;
 }
 
+.gobtanks-images img{
+    display:block;
+    margin:0 auto;
+    min-width:250px;
+    max-width:100%;
+    height:auto;
+}
+
 .tower-images, .core-images{
     display:flex;
     justify-content:space-around;
-    width:100%;
+    width:98%;
+}
+
+.tower-images img, .core-images img{
+    display:block;
+    margin:0 auto;
+    min-width:250px;
+    max-width:70%;
+    height:auto;
+    border:3px solid #90B0CD;
+    border-radius:2px;
 }
 
 .gobtanks-images, .gob-merc-images, .merc-mechs, .cruise-images, .oppressor-images, .brute-images{
@@ -715,8 +732,9 @@ footer{
     .tower-images, .core-images, .gobtanks-images, .merc-mechs{
         display:flex;
         flex-direction:column;
-        justify-content:space-around;
-        max-width:95%;
+        justify-content:center;
+        align-items:center;
+        margin:0 auto;
         min-width:250px;
         }
     }
@@ -756,7 +774,6 @@ footer{
         display:flex;
         flex-direction:column;
         text-align:center;
-        max-width:95%;
         min-width:250px;
     }
 
@@ -796,11 +813,6 @@ footer{
 @media (max-width:500px){
     main{
         padding:0px;
-        width:100%;
-    }
-
-    main p{
-        padding:10px;
         width:100%;
     }
 
@@ -845,23 +857,51 @@ footer{
     .the-machina ul{
         margin-left:30px;
     }
-}
 
-@media (max-width:360px){
-header div h1{
-    font-size:18px;
-    padding-inline:10px;
-    margin-top:-20px;
+    main p{
+        text-align:center;
+        padding:0 10px 30px 10px;
+
     }
-}
 
-@media (max-width:322px){
+    header{
+        height:50px;
+    }
+
+    .twitch img{
+        margin-top:-10px;
+        margin-right:-10px;
+    }
+
+    .profile img{
+        width:40px;
+        height:40px;
+        margin-top:-15px;
+        margin-left:-10px;
+    }
+
+    .title span{
+        display:none;
+    }
+
     header div h1{
-        font-size:15px;
-        }
+        margin-top:-8px;
     }
+}
 
+@media (max-width:336px){
+    header div h1{
+        font-size:18px;
+        margin-top:-5px;
+    }
+}
 
+@media (max-width:302px){
+    header div h1{
+        font-size:16px;
+        margin-top:-5px;
+    }
+}
 
 @media (max-width:850px){
     aside{
@@ -883,6 +923,17 @@ header div h1{
         margin:0 auto;
     }
 }
+
+@media (max-width:1270px){
+    main p{
+        padding:0 30px 30px 30px;
+        width:100%;
+    }
+}
+
+
+
+
 
 
 
